k8s/apps/loki/network-policy-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-gateway-ingress
  namespace: loki
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opentelemetry-collector
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: opentelemetry-collector.default
              app.kubernetes.io/name: default-collector
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opentelemetry-collector
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: opentelemetry-collector.atomic
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opentelemetry-collector
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: opentelemetry-collector.daemonset
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opentelemetry-collector
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: opentelemetry-collector.vyos
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: grafana
              app.kubernetes.io/name: grafana
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: canary
              app.kubernetes.io/instance: loki
              app.kubernetes.io/name: loki
      ports:
        - port: 8080
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opentelemetry-collector
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: opentelemetry-collector.prometheus
      ports:
        - port: 4040
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: gateway
      app.kubernetes.io/instance: loki
      app.kubernetes.io/name: loki
  policyTypes:
    - Ingress
